python/qdis.h

/* qemu instruction decoder -- external interface */
// Return status values
typedef enum
{
    QDIS_OK = 0,
    QDIS_ERR_OUT_OF_BOUNDS_ACCESS = 1, /* instruction ran outside buffer */
    QDIS_ERR_BUFFER_TOO_SMALL = 2,  /* output buffer too small */
    QDIS_ERR_NULLPOINTER = 3, /* unexpected NULL argument */
    QDIS_ERR_ALIGNMENT = 4, /* output buffer not aligned to 8 bytes */
    QDIS_ERR_NOT_FOUND = 5  /* key not found */
} QDisStatus;
/* Instruction interpretation flags */
/* XXX would like a more standarized way that doesn't rely on qemu internals as much? 
 * also make a selection of flags that usefully affect instruction decoding 
 */
/* ARM */
#define QDIS_INST_ARM_THUMB_SHIFT      0   /* true if thumb instruction set mode */
#define QDIS_INST_ARM_THUMB_MASK       (1 << QDIS_INST_ARM_THUMB_SHIFT)
#define QDIS_INST_ARM_VECLEN_SHIFT     1
#define QDIS_INST_ARM_VECLEN_MASK      (0x7 << QDIS_INST_ARM_VECLEN_SHIFT)
#define QDIS_INST_ARM_VECSTRIDE_SHIFT  4
#define QDIS_INST_ARM_VECSTRIDE_MASK   (0x3 << QDIS_INST_ARM_VECSTRIDE_SHIFT)
#define QDIS_INST_ARM_PRIV_SHIFT       6   /* true if in privileged mode */
#define QDIS_INST_ARM_PRIV_MASK        (1 << QDIS_INST_ARM_PRIV_SHIFT)
#define QDIS_INST_ARM_VFPEN_SHIFT      7   /* true if vfp enabled */
#define QDIS_INST_ARM_VFPEN_MASK       (1 << QDIS_INST_ARM_VFPEN_SHIFT)
#define QDIS_INST_ARM_CONDEXEC_SHIFT   8
#define QDIS_INST_ARM_CONDEXEC_MASK    (0xff << QDIS_INST_ARM_CONDEXEC_SHIFT)
#define QDIS_INST_ARM_BSWAP_CODE_SHIFT 16  /* true if big endian */
#define QDIS_INST_ARM_BSWAP_CODE_MASK  (1 << QDIS_INST_ARM_BSWAP_CODE_SHIFT)
/* x86 */
#define QDIS_INST_X86_CPL_SHIFT         0
#define QDIS_INST_X86_SOFTMMU_SHIFT     2 /* true if soft mmu is being used */
#define QDIS_INST_X86_INHIBIT_IRQ_SHIFT 3 /* true if hardware interrupts must be disabled for next instruction */
#define QDIS_INST_X86_CS32_SHIFT        4 /* 16 or 32 segments */
#define QDIS_INST_X86_SS32_SHIFT        5
#define QDIS_INST_X86_ADDSEG_SHIFT      6 /* zero base for DS, ES and SS : can be '0' only in 32 bit CS segment */
#define QDIS_INST_X86_PE_SHIFT          7 /* copy of CR0.PE (protected mode) */
#define QDIS_INST_X86_TF_SHIFT          8 /* must be same as eflags */
#define QDIS_INST_X86_MP_SHIFT          9 /* the order must be MP, EM, TS */
#define QDIS_INST_X86_EM_SHIFT         10
#define QDIS_INST_X86_TS_SHIFT         11
#define QDIS_INST_X86_IOPL_SHIFT       12 /* must be same as eflags */
#define QDIS_INST_X86_LMA_SHIFT        14 /* only used on x86_64: long mode active */
#define QDIS_INST_X86_CS64_SHIFT       15 /* only used on x86_64: 64 bit code segment  */
#define QDIS_INST_X86_RF_SHIFT         16 /* must be same as eflags */
#define QDIS_INST_X86_VM_SHIFT         17 /* must be same as eflags */
#define QDIS_INST_X86_AC_SHIFT         18 /* must be same as eflags */
#define QDIS_INST_X86_SMM_SHIFT        19 /* CPU in SMM mode */
#define QDIS_INST_X86_SVME_SHIFT       20 /* SVME enabled (copy of EFER.SVME) */
#define QDIS_INST_X86_SVMI_SHIFT       21 /* SVM intercepts are active */
#define QDIS_INST_X86_OSFXSR_SHIFT     22 /* CR4.OSFXSR */
#define QDIS_INST_X86_SMAP_SHIFT       23 /* CR4.SMAP */
#define QDIS_INST_X86_CPL_MASK          (3 << QDIS_INST_X86_CPL_SHIFT)
#define QDIS_INST_X86_SOFTMMU_MASK      (1 << QDIS_INST_X86_SOFTMMU_SHIFT)
#define QDIS_INST_X86_INHIBIT_IRQ_MASK  (1 << QDIS_INST_X86_INHIBIT_IRQ_SHIFT)
#define QDIS_INST_X86_CS32_MASK         (1 << QDIS_INST_X86_CS32_SHIFT)
#define QDIS_INST_X86_SS32_MASK         (1 << QDIS_INST_X86_SS32_SHIFT)
#define QDIS_INST_X86_ADDSEG_MASK       (1 << QDIS_INST_X86_ADDSEG_SHIFT)
#define QDIS_INST_X86_PE_MASK           (1 << QDIS_INST_X86_PE_SHIFT)
#define QDIS_INST_X86_TF_MASK           (1 << QDIS_INST_X86_TF_SHIFT)
#define QDIS_INST_X86_MP_MASK           (1 << QDIS_INST_X86_MP_SHIFT)
#define QDIS_INST_X86_EM_MASK           (1 << QDIS_INST_X86_EM_SHIFT)
#define QDIS_INST_X86_TS_MASK           (1 << QDIS_INST_X86_TS_SHIFT)
#define QDIS_INST_X86_IOPL_MASK         (3 << QDIS_INST_X86_IOPL_SHIFT)
#define QDIS_INST_X86_LMA_MASK          (1 << QDIS_INST_X86_LMA_SHIFT)
#define QDIS_INST_X86_CS64_MASK         (1 << QDIS_INST_X86_CS64_SHIFT)
#define QDIS_INST_X86_RF_MASK           (1 << QDIS_INST_X86_RF_SHIFT)
#define QDIS_INST_X86_VM_MASK           (1 << QDIS_INST_X86_VM_SHIFT)
#define QDIS_INST_X86_AC_MASK           (1 << QDIS_INST_X86_AC_SHIFT)
#define QDIS_INST_X86_SMM_MASK          (1 << QDIS_INST_X86_SMM_SHIFT)
#define QDIS_INST_X86_SVME_MASK         (1 << QDIS_INST_X86_SVME_SHIFT)
#define QDIS_INST_X86_SVMI_MASK         (1 << QDIS_INST_X86_SVMI_SHIFT)
#define QDIS_INST_X86_OSFXSR_MASK       (1 << QDIS_INST_X86_OSFXSR_SHIFT)
#define QDIS_INST_X86_SMAP_MASK         (1 << QDIS_INST_X86_SMAP_SHIFT)
/* A few useful selections */
#define QDIS_IFLAGS_DEFAULT_ARM         (QDIS_INST_ARM_VFPEN_MASK)
#define QDIS_IFLAGS_DEFAULT_THUMB       (QDIS_INST_ARM_VFPEN_MASK | QDIS_INST_ARM_THUMB_MASK)
#define QDIS_IFLAGS_DEFAULT_I386        (QDIS_INST_X86_PE_MASK | QDIS_INST_X86_CS32_MASK | QDIS_INST_X86_SS32_MASK)
#define QDIS_IFLAGS_DEFAULT_AMD64       (QDIS_INST_X86_PE_MASK | QDIS_INST_X86_CS32_MASK | \
                                       QDIS_INST_X86_SS32_MASK | QDIS_INST_X86_CS64_MASK | QDIS_INST_X86_LMA_MASK)
typedef struct QDisassembler_ QDisassembler;
typedef uint64_t QDisVal; // 64 bit on every platform
/* Hint for output buffer size.
 * Microcode output is generally guaranteed to stay within this size.
 */
#define QDIS_BUFFER_SIZE 16384
/* Invalid symbol id */
#define QDIS_INVALID ((size_t)-1)
typedef enum {
    /* Strings: General */
    QDIS_INFO_OP = 1,      // opcode name
    QDIS_INFO_COND = 2,    // condition code name
    QDIS_INFO_CALLFLAG = 3,// call flag name (DisCallFlags)
    /* Values: General */
    QDIS_INFO_NUM_OPS = 256,
    /* Strings: CPU arch specific */
    QDIS_INFO_HELPER = 513,   // helper name by ordinal
    QDIS_INFO_HELPER_BY_ADDR = 514, // helper name by address
    QDIS_INFO_GLOBAL = 515,   // global (register) name
    /* Values: CPU arch specific */
    QDIS_INFO_PC_OFFSET = 768,   // Program counter register (env offset)
    QDIS_INFO_SP_OFFSET = 769,   // Stack pointer register (env offset)
    QDIS_INFO_PC_GLOBAL = 770,   // Program counter register (global #, or QDIS_INVALID)
    QDIS_INFO_SP_GLOBAL = 771,   // Stack pointer register (global #, or QDIS_INVALID)
    QDIS_INFO_NUM_HELPERS = 772, // Number of helper functions defined
    QDIS_INFO_NUM_GLOBALS = 773, // Number of globals defined
    QDIS_INFO_GLOBAL_SIZE = 774, // global (register) bit size (DisBitsize)
    QDIS_INFO_GLOBAL_OFFSET = 775, // global (register) address into environment
    QDIS_INFO_STATE_SIZE = 776,  // environment size
} QDisInfoType;
/* Look up name for opcode or helper.
 * Returns the requested name or NULL if no such info.
 */
const char *qdis_LookupName(QDisassembler *dis, QDisInfoType type, size_t id);
/* Look up integer-valued value.
 * */
size_t qdis_LookupValue(QDisassembler *dis, QDisInfoType type, size_t id);
/* Get the implementation of a helper function.
 * */
QDisStatus qdis_GetHelper(QDisassembler *dis, QDisVal helper_id, void *outbuf, size_t outsize);
/* Dump status for debugging.
 */
void qdis_Dump(QDisassembler *dis);
/* Destroy a disassembler.
 */
void qdis_Destroy(QDisassembler *dis);