python/qdis/_qdis.py


# qdis.h: 475
if hasattr(_libs['qdis'], 'qdis_LookupName'):
    qdis_LookupName = _libs['qdis'].qdis_LookupName
    qdis_LookupName.argtypes = [POINTER(QDisassembler), QDisInfoType, c_size_t]
    if sizeof(c_int) == sizeof(c_void_p):
        qdis_LookupName.restype = ReturnString
    else:
        qdis_LookupName.restype = String
        qdis_LookupName.errcheck = ReturnString

# qdis.h: 479
if hasattr(_libs['qdis'], 'qdis_LookupValue'):
    qdis_LookupValue = _libs['qdis'].qdis_LookupValue
    qdis_LookupValue.argtypes = [POINTER(QDisassembler), QDisInfoType, c_size_t]
    qdis_LookupValue.restype = c_size_t

# qdis.h: 483
if hasattr(_libs['qdis'], 'qdis_GetHelper'):
    qdis_GetHelper = _libs['qdis'].qdis_GetHelper
    qdis_GetHelper.argtypes = [POINTER(QDisassembler), QDisVal, POINTER(None), c_size_t]
    qdis_GetHelper.restype = QDisStatus

# qdis.h: 487
if hasattr(_libs['qdis'], 'qdis_Dump'):
    qdis_Dump = _libs['qdis'].qdis_Dump
    qdis_Dump.argtypes = [POINTER(QDisassembler)]
    qdis_Dump.restype = None

# qdis.h: 491
if hasattr(_libs['qdis'], 'qdis_Destroy'):
    qdis_Destroy = _libs['qdis'].qdis_Destroy
    qdis_Destroy.argtypes = [POINTER(QDisassembler)]
    qdis_Destroy.restype = None

# qdis.h: 94
try:
    QDIS_INST_ARM_THUMB_SHIFT = 0
except:
    pass

# qdis.h: 95
try:
    QDIS_INST_ARM_THUMB_MASK = (1 << QDIS_INST_ARM_THUMB_SHIFT)
except:
    pass

# qdis.h: 96
try:
    QDIS_INST_ARM_VECLEN_SHIFT = 1
except:
    pass

# qdis.h: 97
try:
    QDIS_INST_ARM_VECLEN_MASK = (7 << QDIS_INST_ARM_VECLEN_SHIFT)
except:
    pass

# qdis.h: 98
try:
    QDIS_INST_ARM_VECSTRIDE_SHIFT = 4
except:
    pass

# qdis.h: 99
try:
    QDIS_INST_ARM_VECSTRIDE_MASK = (3 << QDIS_INST_ARM_VECSTRIDE_SHIFT)
except:
    pass

# qdis.h: 100
try:
    QDIS_INST_ARM_PRIV_SHIFT = 6
except:
    pass

# qdis.h: 101
try:
    QDIS_INST_ARM_PRIV_MASK = (1 << QDIS_INST_ARM_PRIV_SHIFT)
except:
    pass

# qdis.h: 102
try:
    QDIS_INST_ARM_VFPEN_SHIFT = 7
except:
    pass

# qdis.h: 103
try:
    QDIS_INST_ARM_VFPEN_MASK = (1 << QDIS_INST_ARM_VFPEN_SHIFT)
except:
    pass

# qdis.h: 104
try:
    QDIS_INST_ARM_CONDEXEC_SHIFT = 8
except:
    pass

# qdis.h: 105
try:
    QDIS_INST_ARM_CONDEXEC_MASK = (255 << QDIS_INST_ARM_CONDEXEC_SHIFT)
except:
    pass

# qdis.h: 106
try:
    QDIS_INST_ARM_BSWAP_CODE_SHIFT = 16
except:
    pass

# qdis.h: 107
try:
    QDIS_INST_ARM_BSWAP_CODE_MASK = (1 << QDIS_INST_ARM_BSWAP_CODE_SHIFT)
except:
    pass

# qdis.h: 110
try:
    QDIS_INST_X86_CPL_SHIFT = 0
except:
    pass

# qdis.h: 111
try:
    QDIS_INST_X86_SOFTMMU_SHIFT = 2
except:
    pass

# qdis.h: 112
try:
    QDIS_INST_X86_INHIBIT_IRQ_SHIFT = 3
except:
    pass

# qdis.h: 113
try:
    QDIS_INST_X86_CS32_SHIFT = 4
except:
    pass

# qdis.h: 114
try:
    QDIS_INST_X86_SS32_SHIFT = 5
except:
    pass

# qdis.h: 115
try:
    QDIS_INST_X86_ADDSEG_SHIFT = 6
except:
    pass

# qdis.h: 116
try:
    QDIS_INST_X86_PE_SHIFT = 7
except:
    pass

# qdis.h: 117
try:
    QDIS_INST_X86_TF_SHIFT = 8
except:
    pass

# qdis.h: 118
try:
    QDIS_INST_X86_MP_SHIFT = 9
except:
    pass

# qdis.h: 119
try:
    QDIS_INST_X86_EM_SHIFT = 10
except:
    pass

# qdis.h: 120
try:
    QDIS_INST_X86_TS_SHIFT = 11
except:
    pass

# qdis.h: 121
try:
    QDIS_INST_X86_IOPL_SHIFT = 12
except:
    pass

# qdis.h: 122
try:
    QDIS_INST_X86_LMA_SHIFT = 14
except:
    pass

# qdis.h: 123
try:
    QDIS_INST_X86_CS64_SHIFT = 15
except:
    pass

# qdis.h: 124
try:
    QDIS_INST_X86_RF_SHIFT = 16
except:
    pass

# qdis.h: 125
try:
    QDIS_INST_X86_VM_SHIFT = 17
except:
    pass

# qdis.h: 126
try:
    QDIS_INST_X86_AC_SHIFT = 18
except:
    pass

# qdis.h: 127
try:
    QDIS_INST_X86_SMM_SHIFT = 19
except:
    pass

# qdis.h: 128
try:
    QDIS_INST_X86_SVME_SHIFT = 20
except:
    pass

# qdis.h: 129
try:
    QDIS_INST_X86_SVMI_SHIFT = 21
except:
    pass

# qdis.h: 130
try:
    QDIS_INST_X86_OSFXSR_SHIFT = 22
except:
    pass

# qdis.h: 131
try:
    QDIS_INST_X86_SMAP_SHIFT = 23
except:
    pass

# qdis.h: 133
try:
    QDIS_INST_X86_CPL_MASK = (3 << QDIS_INST_X86_CPL_SHIFT)
except:
    pass

# qdis.h: 134
try:
    QDIS_INST_X86_SOFTMMU_MASK = (1 << QDIS_INST_X86_SOFTMMU_SHIFT)
except:
    pass

# qdis.h: 135
try:
    QDIS_INST_X86_INHIBIT_IRQ_MASK = (1 << QDIS_INST_X86_INHIBIT_IRQ_SHIFT)
except:
    pass

# qdis.h: 136
try:
    QDIS_INST_X86_CS32_MASK = (1 << QDIS_INST_X86_CS32_SHIFT)
except:
    pass

# qdis.h: 137
try:
    QDIS_INST_X86_SS32_MASK = (1 << QDIS_INST_X86_SS32_SHIFT)
except:
    pass

# qdis.h: 138
try:
    QDIS_INST_X86_ADDSEG_MASK = (1 << QDIS_INST_X86_ADDSEG_SHIFT)
except:
    pass

# qdis.h: 139
try:
    QDIS_INST_X86_PE_MASK = (1 << QDIS_INST_X86_PE_SHIFT)
except:
    pass

# qdis.h: 140
try:
    QDIS_INST_X86_TF_MASK = (1 << QDIS_INST_X86_TF_SHIFT)
except:
    pass

# qdis.h: 141
try:
    QDIS_INST_X86_MP_MASK = (1 << QDIS_INST_X86_MP_SHIFT)
except:
    pass

# qdis.h: 142
try:
    QDIS_INST_X86_EM_MASK = (1 << QDIS_INST_X86_EM_SHIFT)
except:
    pass

# qdis.h: 143
try:
    QDIS_INST_X86_TS_MASK = (1 << QDIS_INST_X86_TS_SHIFT)
except:
    pass

# qdis.h: 144
try:
    QDIS_INST_X86_IOPL_MASK = (3 << QDIS_INST_X86_IOPL_SHIFT)
except:
    pass

# qdis.h: 145
try:
    QDIS_INST_X86_LMA_MASK = (1 << QDIS_INST_X86_LMA_SHIFT)
except:
    pass

# qdis.h: 146
try:
    QDIS_INST_X86_CS64_MASK = (1 << QDIS_INST_X86_CS64_SHIFT)
except:
    pass

# qdis.h: 147
try:
    QDIS_INST_X86_RF_MASK = (1 << QDIS_INST_X86_RF_SHIFT)
except:
    pass

# qdis.h: 148
try:
    QDIS_INST_X86_VM_MASK = (1 << QDIS_INST_X86_VM_SHIFT)
except:
    pass

# qdis.h: 149
try:
    QDIS_INST_X86_AC_MASK = (1 << QDIS_INST_X86_AC_SHIFT)
except:
    pass

# qdis.h: 150
try:
    QDIS_INST_X86_SMM_MASK = (1 << QDIS_INST_X86_SMM_SHIFT)
except:
    pass

# qdis.h: 151
try:
    QDIS_INST_X86_SVME_MASK = (1 << QDIS_INST_X86_SVME_SHIFT)
except:
    pass

# qdis.h: 152
try:
    QDIS_INST_X86_SVMI_MASK = (1 << QDIS_INST_X86_SVMI_SHIFT)
except:
    pass

# qdis.h: 153
try:
    QDIS_INST_X86_OSFXSR_MASK = (1 << QDIS_INST_X86_OSFXSR_SHIFT)
except:
    pass

# qdis.h: 154
try:
    QDIS_INST_X86_SMAP_MASK = (1 << QDIS_INST_X86_SMAP_SHIFT)
except:
    pass

# qdis.h: 157
try:
    QDIS_IFLAGS_DEFAULT_ARM = QDIS_INST_ARM_VFPEN_MASK
except:
    pass

# qdis.h: 158
try:
    QDIS_IFLAGS_DEFAULT_THUMB = (QDIS_INST_ARM_VFPEN_MASK | QDIS_INST_ARM_THUMB_MASK)
except:
    pass

# qdis.h: 159
try:
    QDIS_IFLAGS_DEFAULT_I386 = ((QDIS_INST_X86_PE_MASK | QDIS_INST_X86_CS32_MASK) | QDIS_INST_X86_SS32_MASK)
except:
    pass

# qdis.h: 160
try:
    QDIS_IFLAGS_DEFAULT_AMD64 = ((((QDIS_INST_X86_PE_MASK | QDIS_INST_X86_CS32_MASK) | QDIS_INST_X86_SS32_MASK) | QDIS_INST_X86_CS64_MASK) | QDIS_INST_X86_LMA_MASK)
except:
    pass

# qdis.h: 394
try:
    QDIS_BUFFER_SIZE = 16384
except:
    pass

# qdis.h: 397
try:
    QDIS_INVALID = (-1)
except:
    pass

QDisassembler_ = struct_QDisassembler_ # qdis.h: 163

# No inserted files

